--- a/sass/site.sass
+++ b/sass/site.sass
@@ -43,6 +43,7 @@ h2
 p
   margin: 0 auto 20px
   max-width: $alphabet-length * 1.5
+  text-align: justify
 
 .header
   padding: 30px 0 7px
@@ -111,10 +112,11 @@ nav
   .features
     +clearfix
   .feature
-    text-align: center
+    text-align: justify
     margin: 20px 0
     a
       display: block
+      text-align: center
     @media (min-width: 600px)
       float: left
       width: 50%
