Changed footer, updated Team bios.
Added to footer: Pinterest, Twitter, Facebook
Updated bios: Kevin
Added bios: Abram, Kathryn

--- a/sass/site.sass
+++ b/sass/site.sass
@@ -213,6 +213,8 @@ nav
 footer
   border-top: 1px solid $default-rule-color
   padding: 20px 0 40px
+  a
+    color: inherit
   address
     text-align: center
     font-size: 14px
