--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,8 +40,10 @@
   </div>
   <footer>
     <address>
-      <span>588 Sutter Street #299</span>
-      San Francisco, CA 94102
+      <span>588 Sutter Street #299, San Francisco, CA 94102</span>
+	  <span><a href="http://pinterest.com/daslee/sv-angel-portfolio-companies/" target="_blank">Pinterest</a></span>
+	  <span><a href="https://twitter.com/svangel/companies" target="_blank">Twitter</a></span>
+	  <a href="http://www.facebook.com/svangelfirm" target="_blank">Facebook</a>
     </address>
   </footer>
   <script type="text/javascript" src="/js/retina.js"></script>
