Added "Our Business Model" to nav

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
     <nav>
       <a href="/" class="about-link {% if page.name == "home" %}current{% endif %}">About Us</a>
       <a href="/team" class="team-link {% if page.name == "team" %}current{% endif %}">Team</a>
+      <a href="http://www.quora.com/Ron-Conway-SV-Angel/What-is-the-business-model-of-SV-Angel" class="team-link">Our Business Model</a>
       <a href="http://hours.svangel.com/signup/" class="team-link {% if page.name == "page-founder" %}current{% endif %}">Founder Login</a>
       {% comment %}
       <a href="/companies" class="companies-link {% if page.name == "companies" %}current{% endif %}">Companies</a>
